:bug: motions not showing

--- a/src/style/homepage.css
+++ b/src/style/homepage.css
@@ -67,7 +67,7 @@
   padding: 5vh 5vh 0 0;
 }
 
-.motions video {
+.motions img {
   width: 60vh;
   margin: 5vh;
 }
@@ -178,7 +178,8 @@
     margin: 3vh;
   }
 
-  .motions video {
+  .motions img {
+    width: 30vh;
     margin: 1vh 10vh;
     margin-top: 5vh;
   }
